// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidingPanel #render() render noscript without children 1`] = `<SlidingPanelHeader />`;

exports[`SlidingPanel #render() render with children 1`] = `
<SlidingPanelHeader>
  <div
    className="ui-sliding-panel-header"
  >
    <div
      className="ui-sliding-panel-header__left-block"
    />
    <h3
      className="ui-sliding-panel-header__title"
    >
      Test Title
    </h3>
    <div
      className="ui-sliding-panel-header__right-block"
    >
      <button
        className="ui-sliding-panel-header__close-button"
        data-rel="close"
      >
        ×
      </button>
    </div>
  </div>
</SlidingPanelHeader>
`;

exports[`SlidingPanel #render() render with custom left and right blocks 1`] = `
<SlidingPanelHeader
  renderLeftBlock={[Function]}
  renderRightBlock={[Function]}
>
  <div
    className="ui-sliding-panel-header"
  >
    <div
      className="ui-sliding-panel-header__left-block"
    >
      <button
        className="ui-sliding-panel-header__left-block-back"
        style={
          Object {
            "marginLeft": "15px",
          }
        }
      >
         ← 
      </button>
    </div>
    <h3
      className="ui-sliding-panel-header__title"
    >
      Test Title
    </h3>
    <div
      className="ui-sliding-panel-header__right-block"
    >
      <button
        className="ui-sliding-panel-header__close-button"
        data-rel="close"
        style={
          Object {
            "marginRight": "15px",
          }
        }
      >
         close me! 
      </button>
    </div>
  </div>
</SlidingPanelHeader>
`;

exports[`SlidingPanel #render() should render with backButtonLabel and onBackButtonClick 1`] = `
<SlidingPanelHeader
  backButtonLabel="foo"
  onBackButtonClick={[MockFunction]}
  useDefaultLeftBlock={true}
>
  <div
    className="ui-sliding-panel-header"
  >
    <div
      className="ui-sliding-panel-header__left-block"
    >
      <button
        className="ui-sliding-panel-header__left-block-back"
        onClick={[MockFunction]}
      >
        <span
          className="ui-sliding-panel-header__left-block-back-icon"
        />
        <span
          className="ui-sliding-panel-header__left-block-back-text"
        >
          foo
        </span>
      </button>
    </div>
    <h3
      className="ui-sliding-panel-header__title"
    >
      <span
        className="my-class"
      >
         my label 
      </span>
    </h3>
    <div
      className="ui-sliding-panel-header__right-block"
    >
      <button
        className="ui-sliding-panel-header__close-button"
        data-rel="close"
      >
        ×
      </button>
    </div>
  </div>
</SlidingPanelHeader>
`;

exports[`SlidingPanel #render() should render with dataAttr and className 1`] = `
<SlidingPanelHeader
  className="foo"
  dataAttrs={
    Object {
      "foo": "bar",
    }
  }
>
  <div
    className="ui-sliding-panel-header foo"
    data-foo="bar"
  >
    <div
      className="ui-sliding-panel-header__left-block"
    />
    <h3
      className="ui-sliding-panel-header__title"
    >
      <span
        className="my-class"
      >
         my label 
      </span>
    </h3>
    <div
      className="ui-sliding-panel-header__right-block"
    >
      <button
        className="ui-sliding-panel-header__close-button"
        data-rel="close"
      >
        ×
      </button>
    </div>
  </div>
</SlidingPanelHeader>
`;

exports[`SlidingPanel #render() should render with deprecated rightBlock and leftBlock 1`] = `
<SlidingPanelHeader
  leftBlock={
    <button
      className="back-button"
      data-rel="close"
      style={
        Object {
          "marginRight": "15px",
        }
      }
    >
       ← 
    </button>
  }
  rightBlock={
    <button
      className="close-button"
      data-rel="close"
      style={
        Object {
          "marginRight": "15px",
        }
      }
    >
       close me! 
    </button>
  }
>
  <div
    className="ui-sliding-panel-header"
  >
    <div
      className="ui-sliding-panel-header__left-block"
    >
      <button
        className="back-button"
        data-rel="close"
        style={
          Object {
            "marginRight": "15px",
          }
        }
      >
         ← 
      </button>
    </div>
    <h3
      className="ui-sliding-panel-header__title"
    >
      <span
        className="my-class"
      >
         my label 
      </span>
    </h3>
    <div
      className="ui-sliding-panel-header__right-block"
    >
      <button
        className="close-button"
        data-rel="close"
        style={
          Object {
            "marginRight": "15px",
          }
        }
      >
         close me! 
      </button>
    </div>
  </div>
</SlidingPanelHeader>
`;
